<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/Nome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BtnHist"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaHistoria"
        android:text="@string/BtnHist"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/BtnGuia"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/average_sans"
        android:onClick="IrParaTelaGuia"
        android:text="@string/BtnGuia"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

</androidx.constraintlayout.widget.ConstraintLayout>