<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".Historia">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:background="@color/design_default_color_error"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/BtnHist"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="305dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.676">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="293dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/HistoriaDoJogo"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/secretmeet" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:text="@string/HistoriaDoJogo2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                android:importantForAccessibility="no"
                android:src="@drawable/pasta" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="293dp"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="3dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/HistoriaDoJogo3"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="IrParaTelaMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>